--- a/src/catFact.html
+++ b/src/catFact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="breedApp">
 <head>
-    <title>Cat Breeds</title>
+    <title>Cat Breed Details</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -16,11 +16,11 @@
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
-                    <th>Name</th>
+                    <th>Breed Name</th>
+                    <th>Coat</th>
+                    <th>Country</th>
                     <th>Origin</th>
-                    <th>Description</th>
-                    <th>Temperament</th>
-                    <th>Life Span</th>
+                    <th>Pattern</th>
                 </tr>
             </thead>
             <tbody>
